--- a/templates/index.html
+++ b/templates/index.html
@@ -4,111 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>System Controls UI</title>
-    <style>
-        body {
-            background-color: #2C2F33;
-            color: white;
-            font-family: Arial, sans-serif;
-        }
-
-        header {
-            text-align: center;
-            font-size: 24px;
-            margin-top: 20px;
-        }
-
-        .status-bar {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        nav {
-            float: left;
-            width: 150px;
-            margin-top: 50px;
-        }
-
-        nav button {
-            display: block;
-            width: 100%;
-            background-color: #23272A;
-            color: white;
-            border: none;
-            padding: 10px;
-            margin-bottom: 5px;
-            cursor: pointer;
-        }
-
-        nav button:hover {
-            background-color: #940000;
-        }
-
-        .controls {
-            position: absolute;
-            float: left; /* Move controls to the right side */
-            width: calc(100% - 150px);
-            margin-left: 50vw;
-            margin-top: 60vh;
-        }
-
-        .controls button {
-            display: inline-block;
-            background-color: #23272A;
-            color: white;
-            padding: 20px;
-            cursor: pointer;
-        }
-
-        .controls button:hover {
-            background-color: #940000;
-        }
-
-        .launch-scripts-button {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            background-color: #23272A;
-            color: white;
-            border: none;
-            border-radius: 50%;
-            padding: 10px;
-            cursor: pointer;
-        }
-
-        .launch-scripts-button:hover {
-            background-color: #940000;
-        }
-
-    </style>
+    <link rel="stylesheet" href="static/styles/base.css">
 </head>
+
 <body>
+    <header>
+        <div class="center-uncontained">SYSTEM CONTROLS</div>
+    </header>
 
-<header>SYSTEM CONTROLS</header>
+    <div class="column-container", style="width: 25%;">
+        <nav>
+            <form action="/home" method="post">
+                <button type="submit", name="button", value="home">Home</button>
+                <button type="submit", name="button", value="status">Trailer Status</button>
+                <button type="submit", name="button", value="pid">PID Control</button>
+                <button type="submit", name="button", value="vision">Vision</button>
+                <button type="submit", name="button", value="mission_planning">Mission Planning</button>
+            </form>
+        </nav>
+    </div>
 
-<div class="status-bar">ROS Connection Status: CLOSED</div>
+    {% block column_containers %}
+    <div class="column-container">
+        <div class="status-bar">ROS Connection Status: CLOSED</div>
+    </div>
 
-<div class="controls">
+    <div class="column-container">
+        <div class="controls">
+            <form action="/home" method="post">
+                <button type="submit", name="button", value="kill">KILL ROBOT</button>
+                <button type="submit", name="button", value="launch">LAUNCH ROBOT</button>
+            </form>
+        </div>
+    </div>
+    {% endblock %}
 
-    <form action="/home" method="post">
-        <button type="submit", name="button", value="kill">KILL ROBOT</button>
-        <button type="submit", name="button", value="launch">LAUNCH ROBOT</button>
-    </form>
+    
 
-</div>
+    <button class="launch-scripts-button">
+        <img src="https://via.placeholder.com/30" alt="Launch Scripts" width="30" height="30">
+    </button>
 
-<nav>
-    <form action="/home" method="post">
-        <button type="submit", name="button", value="home">Home</button>
-        <button type="submit", name="button", value="status">Trailer Status</button>
-        <button type="submit", name="button", value="pid">PID Control</button>
-        <button type="submit", name="button", value="vision">Vision</button>
-        <button type="submit", name="button", value="mission_planning">Mission Planning</button>
-    </form>
-</nav>
-
-<button class="launch-scripts-button">
-    <img src="https://via.placeholder.com/30" alt="Launch Scripts" width="30" height="30">
-</button>
-
-</body>
+    </body>
 </html>
